// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResizeHandle Snapshot Tests correctly applies the theme context className 1`] = `
<ThemeContextProvider
  theme={
    Object {
      "className": "orion-fusion-theme",
    }
  }
>
  <ResizeHandle
    id="test-handle"
  >
    <DraggableCore
      allowAnyClick={false}
      cancel={null}
      disabled={false}
      enableUserSelectHack={true}
      grid={null}
      handle={null}
      offsetParent={null}
      onDrag={[Function]}
      onMouseDown={[Function]}
      onStart={[Function]}
      onStop={[Function]}
      transform={null}
    >
      <div
        className="resize-handle orion-fusion-theme"
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "touchAction": "none",
          }
        }
      />
    </DraggableCore>
  </ResizeHandle>
</ThemeContextProvider>
`;

exports[`ResizeHandle Snapshot Tests should render a ResizeHandle with all props 1`] = `
<DraggableCore
  allowAnyClick={false}
  cancel={null}
  disabled={false}
  enableUserSelectHack={true}
  grid={null}
  handle={null}
  offsetParent={null}
  onDrag={[Function]}
  onMouseDown={[Function]}
  onStart={[Function]}
  onStop={[Function]}
  transform={null}
>
  <div
    className="resize-handle"
    onClick={[Function]}
  />
</DraggableCore>
`;

exports[`ResizeHandle Snapshot Tests should render a ResizeHandle with minimal props 1`] = `
<DraggableCore
  allowAnyClick={false}
  cancel={null}
  disabled={false}
  enableUserSelectHack={true}
  grid={null}
  handle={null}
  offsetParent={null}
  onDrag={[Function]}
  onMouseDown={[Function]}
  onStart={[Function]}
  onStop={[Function]}
  transform={null}
>
  <div
    className="resize-handle"
    onClick={[Function]}
  />
</DraggableCore>
`;
